--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Firebase Google API keys
+ios/Runner/GoogleService-Info.plist
+android/app/google-services.json
