--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  provider: ^6.0.3
-  flutter_svg: ^1.1.1+1
+  provider: ^6.0.4
+  flutter_svg: ^1.1.6
   gap: ^2.0.0
   hive: ^2.2.3
   path_provider: ^2.0.11
-  device_info_plus: ^4.0.0
+  device_info_plus: ^8.0.0
 
   # Firebase
-  firebase_core: ^1.20.0
-  cloud_firestore: ^3.4.1
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,14 +49,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.9.3
+  flutter_launcher_icons: ^0.10.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
